UX: fix chat drawer z-index (#27568)

--- a/plugins/chat/assets/stylesheets/common/chat-drawer.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-drawer.scss
@@ -25,8 +25,8 @@ html.rtl {
 }
 
 .chat-drawer-outlet-container {
-  // higher than timeline, lower than composer, lower than user card (bump up below)
-  z-index: z("composer", "content") - 1;
+  // higher than timeline, lower than composer, dropdown, and user card
+  z-index: z("chat-drawer");
   position: fixed;
   right: var(--composer-right, 20px);
   left: 0;
